--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
-        <h3>Cultura</h3>
+      <div class='header'>
+            <h3>Cultura</h3>
         <div class="numero-up">
             <p class="num">1</p> 
             <img src="iconOro.png" style="width: 100%;" alt="Oro">
+        </div>
         </div>
     </header>
     <main>
@@ -35,11 +37,15 @@
        </div>
     </main>
     <footer>
+        <div class='footer'>
+            
         <div class="numero-down">
             <img src="iconOro.png" alt="Oro">
             <p class="num-down">1</p>
         </div>
         <img src="qr.png" alt="qr">
+    
+        </div>
     </footer>
 </body>
 </html>
