--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="iconOro.png" alt="Oro">
             <p class="num-down">1</p>
         </div>
-        <img src="qr.png" alt="qr">
+        <img class='footerimg' src="qr.png" alt="qr">
     
         </div>
     </footer>
