--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>Cultura</h3>
         <div class="numero-up">
             <p class="num">1</p> 
-            <img src="iconOro.png" style="width: 100%;" alt="Oro">
+            <img src="iconOro.png"  alt="Oro">
         </div>
         </div>
     </header>
