--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class='header'>
             <h3>Cultura</h3>
         <div class="numero-up">
-            <p class="num">1</p> 
+            <p class="num">2</p> 
             <img src="iconOro.png"  alt="Oro">
         </div>
         </div>
@@ -29,9 +29,9 @@
             informados, a ser escuchados, a participar.”
         </p>
         <ol type="a">
-            <li>Equidad</li>
-            <li>Ayuda mutua</li>
-            <li>Igualdad</li>
+            <li class="incorrecta">Equidad</li>
+            <li class="incorrecta">Ayuda mutua</li>
+            <li class="correcta">Igualdad</li>
     
         </ol>    
        </div>
